# oxidoor

./: Cargo.toml  Makefile  mise.toml
config/: default.toml
oxidoor-app/: app.json  package-lock.json  package.json
oxidoor-app/app/(tabs)/: _layout.tsx  dashboard.tsx  devices.tsx
oxidoor-core/src/: config.rs  database.rs  error.rs
oxidoor-embedded/: Cargo.toml  mise.toml
oxidoor-embedded/src/: main.rs
oxidoor-embedded/src/lock/: controller.rs  mod.rs  state.rs
