[workspace]
members = [
  ".",
  "oxidoor-core",
  "oxidoor-embedded-server",
  "oxidoor-web-server",
]
exclude = [
  "oxidoor-embedded",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
description = "OXIDOOR is a smart door lock system that uses the ESP32-S3 chip."
authors = ["AprilNEA <github@sku.moe>"]
license = "Apache-2.0"
repository = "https://github.com/aprilnea/oxidoor"

[workspace.dependencies]
# Asynchronous runtime
tokio = { version = "1", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
# Data Structure
once_cell = "1.18"
# Error Handling
anyhow = "1.0"
thiserror = "2.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# [package]
# name = "oxidoor"
# edition = "2024"
# version.workspace = true
# description.workspace = true
# authors.workspace = true
# license.workspace = true
# repository.workspace = true

# [dependencies]

# [profile.release]
# opt-level = "s"

# [profile.dev]
# debug = true    # Symbols are nice and they don't increase the size on Flash
# opt-level = "z"

[workspace.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_sdkconfig_defaults = ["hello2/sdkconfig.defaults"]
esp_idf_sys_root_crate = "hello2"
