[package]
name = "oxidoor-embedded"
edition = "2021"
rust-version = "1.77"
# version = { workspace = true }
# description = { workspace = true }
# authors = { workspace = true }
# license = { workspace = true }
# repository = { workspace = true }

[workspace]

[[bin]]
name = "oxidoor-embedded"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"
heapless = "0.9"
serde = "1.0"
# esp-idf-svc = "0.51"

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
embassy-executor = { version = "0.7", features = ["executor-thread", "arch-std"] }
embassy-futures = "0.1"
embassy-time = "0.5"
static_cell = "2.1"
# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
embuild = "0.33"
